--- a/index.html
+++ b/index.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Matt Dougherty - Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="mediaqueries.css">
-    </head>
-    <body>
-        <!-- Navigation Bar -->
-        <nav id="desktop-nav">
-            <div class="logo">Matt Dougherty</div>
-            <div>
-                <ul class="nav-links">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matt Dougherty - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaqueries.css">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav id="desktop-nav">
+        <div class="logo">Matt Dougherty</div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Hamburger Menu -->
+    <nav id="hamburger-nav">
+        <div class="logo">Matt Dougherty</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-        </nav>
-    
-        <!-- Hamburger Menu -->
-        <nav id="hamburger-nav">
-            <div class="logo">Matt Dougherty</div>
-            <div class="hamburger-menu">
-                <div class="hamburger-icon" onclick="toggleMenu()">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="menu-links">
-                    <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-                    <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-                </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </div>
-        </nav>
+        </div>
+    </nav>
+
     <!-- Profile Section -->
     <section id="about">
         <div class="section_pic-container">
-            <img src="./assets/mattProfilePic.jpg" alt="Matt Dougherty profile pic" />
+            <img src="./assets/profile-pic.png" alt="Matt Dougherty profile pic" />
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello, I'm</p>
@@ -54,7 +55,8 @@
     <!-- Experience Section -->
     <section id="experience">
         <h2>Experience</h2>
-            <img src="./assets/exp.jpg" alt="Exp" />
+        <div class="image-container">
+            <img src="./assets/exp.jpg" alt="Experience Image" class="custom-image">
         </div>
         <p>Over the years, I've had the privilege of working with cutting-edge technologies and contributing to various projects. My skills include HTML, CSS, JavaScript, and more.</p>
     </section>
@@ -63,16 +65,20 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <img src="./assets/arrow.png" alt="Project 1">
+            <div class="smaller-image-container">
+                <img src="./assets/project1.jpg" alt="Project 1" class="smaller-image">
+            </div>
             <p>Capstone Design Project: As part of my academic journey, I developed an innovative project that leveraged modern technologies. The project aimed to solve [describe the problem it addresses].</p>
         </div>
     </section>
 
     <!-- (Optional) Contact Section -->
     <section id="contact">
-
         <h2>Contact</h2>
-        <p>Feel free to reach out to me through email at mattdougherty49@gmail.com. You can also connect with me on LinkedIn and Twitter for professional discussions and networking.</p>
+        <div class="image-container">
+            <img src="./assets/contact.jpg" alt="Contact Image" class="custom-image">
+        </div>
+        <p>Feel free to reach out to me through email at myemail@example.com. You can also connect with me on LinkedIn and Twitter for professional discussions and networking.</p>
     </section>
 
     <!-- Footer -->
