--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matt Dougherty - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
 </head>
+
 <body>
-    <!-- Navigation Bar -->
     <nav id="desktop-nav">
         <div class="logo">Matt Dougherty</div>
         <div>
@@ -21,8 +21,6 @@
             </ul>
         </div>
     </nav>
-
-    <!-- Hamburger Menu -->
     <nav id="hamburger-nav">
         <div class="logo">Matt Dougherty</div>
         <div class="hamburger-menu">
@@ -39,53 +37,149 @@
             </div>
         </div>
     </nav>
-
-    <!-- Profile Section -->
-    <section id="about">
+    <section id="profile">
         <div class="section_pic-container">
-            <img src="./assets/profile-pic.png" alt="Matt Dougherty profile pic" />
+            <img src="./assets/mattProfilePic.jpg" alt="Matt Dougherty profile pic">
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello, I'm</p>
             <h1 class="title">Matt Dougherty</h1>
-            <p class="section_text_p2">Frontend developer</p>
-        </div>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience">
-        <h2>Experience</h2>
-        <div class="image-container">
-            <img src="./assets/exp.jpg" alt="Experience Image" class="custom-image">
-        </div>
-        <p>Over the years, I've had the privilege of working with cutting-edge technologies and contributing to various projects. My skills include HTML, CSS, JavaScript, and more.</p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <div class="smaller-image-container">
-                <img src="./assets/project1.jpg" alt="Project 1" class="smaller-image">
+            <p class="section_text_p2">Computer Engineer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/MattDoughertyResume2023.pdf')">
+                    Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href=('./#contact')">
+                    Contact Info
+                </button>
             </div>
-            <p>Capstone Design Project: As part of my academic journey, I developed an innovative project that leveraged modern technologies. The project aimed to solve [describe the problem it addresses].</p>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="My Linkedin profile"
+                    class="icon" onclick="location.href='https://www.linkedin.com/in/MattDougherty777/'" />
+                <img src="./assets/github.png" alt="My Github profile"
+                    class="icon" onclick="location.href='INSERT_YOUR_GITHUB_PROFILE_URL_HERE'" />
+            </div>
         </div>
     </section>
-
-    <!-- (Optional) Contact Section -->
+    <section id="about">
+        <p class="section_text_p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section_pic-container">
+                <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <h3>CAREER OBJECTIVE</h3>
+                        <p>A diligent and motivated Computer Engineering student seeking a full-time position to apply
+                            technical skills and gain valuable industry experience.</p>
+                        <h3>EDUCATION</h3>
+                        <p>Bachelor of Science in Computer Engineering, Mississippi State University<br />Expected
+                            graduation: May 2024</p>
+                    </div>
+                    <div class="details-container">
+                        <h3>EXPERIENCE</h3>
+                        <p>Software Engineering Intern, 402nd Software Engineering Group | May 2021 - Present
+                            <ul>
+                                <li>Worked with a security clearance to develop, patch, and maintain software for the
+                                    United States Air Force.</li>
+                                <li>Collaborated with a team to modify hardware as required.</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                        I am a Computer Engineering student with a strong passion for technology and problem-solving.
+                        Excited to learn and apply new skills in real-world scenarios.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
+    </section>
+    <section id="experience">
+        <p class="section_text_p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Network Engineer</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                            <div>
+                                <h3>Network Creation</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    </section>
+    <section id="projects">
+        <p class="section_text_p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                 <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="" alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title"></h2>
+                    <p></p>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-2.jpg" alt="" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title"></h2>
+                    <p></p>
+                </div> 
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/robot.jpg" alt="Project 3" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project 3</h2>
+                    <p>Line Sensing Robot</p>
+                    <p>Collaborated on a class project to develop a line sensing robot. 3D printed the body and wheels
+                        of the robot. Contributed to the coding and programming to enable it to follow a black line.</p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+    </section>
     <section id="contact">
-        <h2>Contact</h2>
-        <div class="image-container">
-            <img src="./assets/contact.jpg" alt="Contact Image" class="custom-image">
+        <p class="section_text_p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
+                <p><a href="mailto:mld561@msstate.edu">mld561@msstate.edu</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/linkedin.png" alt="Linkedin icon" class="icon contact-icon">
+                <p><a href="https://www.linkedin.com/in/MattDougherty777/">Linkedin</a></p>
+            </div>
         </div>
-        <p>Feel free to reach out to me through email at myemail@example.com. You can also connect with me on LinkedIn and Twitter for professional discussions and networking.</p>
     </section>
-
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Matt Dougherty. All rights reserved.</p>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2023 Matt Dougherty. All Rights Reserved.</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
+
 </html>
